src/objects/Account_Personal_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account Personal Information</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Personal Information</relationshipLabel>
        <relationshipName>Account_Personal_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>TODAY()- Date_of_Birth__c</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Since__c</fullName>
        <label>Client Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Fax__c</fullName>
        <label>Home Fax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_ADV_Offering__c</fullName>
        <label>Last ADV Offering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Date_of_Birth__c</fullName>
        <label>Spouse Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spouse_Firstname__c</fullName>
        <label>Spouse Firstname</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Gender__c</fullName>
        <label>Spouse Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Job_Title__c</fullName>
        <label>Spouse Job Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Last_Name__c</fullName>
        <label>Spouse Last Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Middle_Name__c</fullName>
        <label>Spouse Middle Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Nickname__c</fullName>
        <label>Spouse Nickname</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Source__c</fullName>
        <label>Spouse Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Status__c</fullName>
        <label>Spouse Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Suffix__c</fullName>
        <label>Spouse Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_TaxID__c</fullName>
        <label>Spouse TaxID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Fax__c</fullName>
        <label>Work Fax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Personal Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Account Personal Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Personal Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>